# moiro_interfaces

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
.gitbackup/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
.gitbackup/logs/: HEAD
.gitbackup/logs/refs/: stash
.gitbackup/logs/refs/heads/: main  (+1 more)
.gitbackup/objects/pack/: pack-fdb3f4f7cd9973075dc8949f3e8ba120de86abd7.idx
.gitbackup/refs/: stash
.gitbackup/refs/heads/: main
adaface/: CMakeLists.txt  package.xml  setup.py
adaface/adaface/: adaface_ros2.py  video_publisher.py  world_node.py
adaface/adaface/script/: adaface.py
adaface/adaface/script/face_alignment/: align.py
adaface/adaface/script/face_alignment/mtcnn_pytorch/src/: get_nets.py
adaface/launch/: adaface.launch.py
adaface/script/: adaface.py
adaface/test/: world_test.py
adaface_interfaces/: CMakeLists.txt  package.xml
adaface_ros/: CMakeLists.txt  package.xml  setup.cfg  setup.py
adaface_ros/adaface_ros/: adaface_ros2.py  video_publisher.py  world_node.py
adaface_ros/adaface_ros/script/: adaface.py  requirements.txt
adaface_ros/launch/: adaface.launch.py
human_follower/: CMakeLists.txt  package.xml
human_follower/src/: dynamic_follow.cpp
moiro_interfaces/: CMakeLists.txt
moiro_interfaces/msg/: DetectionArray.msg  FaceBox2D.msg  Mask.msg  Pose2D.msg
moiro_interfaces/srv/: TargetDepth.srv  TargetPose.srv
msg/: BBoxYolo.msg  BoundingBox2D.msg  Detection.msg  DetectionInfo.msg  KeyPoint2D.msg  KeyPoint2DArray.msg  KeyPoint3DArray.msg
yolov8_ros/: .gitignore
yolov8_ros/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
yolov8_ros/log/: latest_build
yolov8_ros/yolov8_bringup/launch/: yolov8.launch.py
yolov8_ros/yolov8_msgs/: CMakeLists.txt
yolov8_ros/yolov8_msgs/action/: DetectionAction.action
yolov8_ros/yolov8_msgs/msg/: Detection.msg  DetectionInfo.msg  FaceBox.msg  FaceBox2D.msg  FaceBoxArray.msg
yolov8_ros/yolov8_msgs/srv/: Person.srv  TargetPose.srv
yolov8_ros/yolov8_ros/: package.xml  setup.py
(+36 files in other folders)
