<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>adaface</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="alsgk0404@hanyang.ac.kr">minha</maintainer>
  <license>TODO: License declaration</license>

  <!-- <depend>numpy</depend>
  <depend>cv2</depend>
  <depend>sys</depend>
  <depend>argparse</depend>
  <depend>torch</depend>
  <depend>net</depend>
  <depend>os</depend> -->
  <depend>rclpy</depend>
  <depend>adaface_interfaces</depend>
  <depend>yolov8_msgs</depend>
  <depend>yolov8_ros</depend>

  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
